--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "20": "^3.1.9",
     "@strapi/plugin-i18n": "4.14.5",
     "@strapi/plugin-users-permissions": "4.14.5",
     "@strapi/provider-upload-cloudinary": "^4.14.5",
     "@strapi/strapi": "4.14.5",
+    "latest": "^0.2.0",
     "pg": "8.8.0",
     "strapi-plugin-responsive-image": "^1.1.0"
   },
