--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/strapi": "4.14.5",
     "latest": "^0.2.0",
     "pg": "8.8.0",
+    "semver": "^7.5.4",
     "strapi-plugin-responsive-image": "^1.1.0"
   },
   "author": {
